<?xml version="1.0"?>
<package>
  <name>ruka</name>
  <version>0.0.1</version>
  <description>Python driver TurtleBro RUKA via EasyHID</description>

  <maintainer email="romanbt405@gmail.com">Roman Shcherbov</maintainer>
  <license>CISST</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>

</package>
